Fixed sidebar overlapping modal dialogs

--- a/src/components/DemoPage/DemoPage.less
+++ b/src/components/DemoPage/DemoPage.less
@@ -10,6 +10,9 @@
   position: fixed;
   top: 0;
   width: 300px;
+}
+
+.demo-page__filter-sidebar--mobile {
   z-index: 9999;
 }
 
